RESOLVED FIXED271881
[GTK][2.44.0] Compile errors when !ENABLE(VIDEO)
https://bugs.webkit.org/show_bug.cgi?id=271881
Summary [GTK][2.44.0] Compile errors when !ENABLE(VIDEO)
Thomas Devoogdt
Reported 2024-03-29 00:17:22 PDT
Hi, I'm trying to bump webkitgtk on buildroot from 2.42.5 to 2.44.0. In GraphicsContextGL, a new method surfaceBufferToVideoFrame was added, which references VideoFrame which is not available. The inheriting classes and users are also impacted. (I think that this commit is related: https://commits.webkit.org/269757@main) I get many compile errors, so probably there is more than just the ENABLE(VIDEO) flag, but start here as a reference. If I find other related compile errors, then I can use this bug report as a reference. Kr, Thomas Devoogdt
Attachments
EWS
Comment 1 2024-04-02 16:06:26 PDT
Committed 276977@main (ea2be408f27e): <https://commits.webkit.org/276977@main> Reviewed commits have been landed. Closing PR #26651 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.