Source/WebKit/WebProcess/InjectedBundle/InjectedBundlePageFullScreenClient.h
@@ -32,6 +32,7 @@
 #include "WKBundlePageFullScreenClient.h"
 #include <WebCore/FloatSize.h>
 #include <WebCore/HTMLMediaElement.h>
+#include <WebCore/HTMLMediaElementEnums.h>
 #include <WebCore/MediaPlayerEnums.h>
 #include <wtf/Forward.h>
 
